syntax = "proto3";

package quant.v1;

import "google/protobuf/timestamp.proto";
import "quant/v1/error_reason.proto";

option go_package = "github.com/wyfcoding/financialtrading/go-api/quant/v1;v1";

service QuantService {
  rpc GetSignal(GetSignalRequest) returns (GetSignalResponse) {};
  
  // Strategy Management
  rpc CreateStrategy(CreateStrategyRequest) returns (CreateStrategyResponse) {};
  rpc GetStrategy(GetStrategyRequest) returns (GetStrategyResponse) {};

  // Backtesting
  rpc RunBacktest(RunBacktestRequest) returns (RunBacktestResponse) {};
  rpc GetBacktestResult(GetBacktestResultRequest) returns (GetBacktestResultResponse) {};
}

enum IndicatorType {
  INDICATOR_UNSPECIFIED = 0;
  SMA = 1;
  RSI = 2;
  EMA = 3;
}

message GetSignalRequest {
  string symbol = 1;
  IndicatorType indicator = 2;
  int32 period = 3;
}

message Signal {
  string symbol = 1;
  IndicatorType indicator = 2;
  double value = 3;
  int32 period = 4;
}

message GetSignalResponse {
  Signal signal = 1;
}

message CreateStrategyRequest {
  string name = 1;
  string description = 2;
  string script = 3;
}

message CreateStrategyResponse {
  string strategy_id = 1;
}

message GetStrategyRequest {
  string id = 1;
}

message Strategy {
  string id = 1;
  string name = 2;
  string description = 3;
  string script = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetStrategyResponse {
  Strategy strategy = 1;
}

message RunBacktestRequest {
  string strategy_id = 1;
  string symbol = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  double initial_capital = 5;
}

message RunBacktestResponse {
  string backtest_id = 1;
  string status = 2;
}

message GetBacktestResultRequest {
  string id = 1;
}

message BacktestResult {
  string id = 1;
  string strategy_id = 2;
  string symbol = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  double total_return = 6;
  double max_drawdown = 7;
  double sharpe_ratio = 8;
  int32 total_trades = 9;
  int32 winning_trades = 10;
  string status = 11;
  google.protobuf.Timestamp created_at = 12;
}

message GetBacktestResultResponse {
  BacktestResult result = 1;
}
